--- a/locales/zh-TW.json
+++ b/locales/zh-TW.json
@@ -1,3 +1,14 @@
 {
-  "language": "語言"
+  "cancel": "取消",
+  "confirm": "確認",
+  "fetch-user-info": "取得使用者資訊",
+  "language": "語言",
+  "length-must-max": "{something}的長度不能多於{length}",
+  "length-must-min": "{something}的長度不能少於{length}",
+  "login": "登入",
+  "login-failed": "登入失敗",
+  "logout": "登出",
+  "password": "密碼",
+  "please-enter-something": "請輸入{something}",
+  "username": "使用者名稱"
 }
