refactor custom editor component for improved layout and functionality, add edit label to localization files

--- a/locales/en.json
+++ b/locales/en.json
@@ -3,6 +3,7 @@
   "back-to-homepage": "back to home",
   "cancel": "cancel",
   "confirm": "confirm",
+  "edit": "edit",
   "editor-demo": "editor demo",
   "fetch-user-info": "fetch user info",
   "heading-normal": "normal",
