--- a/locales/zh-TW.json
+++ b/locales/zh-TW.json
@@ -3,6 +3,7 @@
   "back-to-homepage": "回到首頁",
   "cancel": "取消",
   "confirm": "確認",
+  "edit": "編輯",
   "editor-demo": "編輯器演示",
   "fetch-user-info": "取得使用者資訊",
   "heading-normal": "內文",
