add localization for 'nuxt-template' in English and Traditional Chinese, update title template to use localized string

--- a/locales/zh-TW.json
+++ b/locales/zh-TW.json
@@ -15,6 +15,7 @@
   "login": "登入",
   "login-failed": "登入失敗",
   "logout": "登出",
+  "nuxt-template": "nuxt 範本",
   "password": "密碼",
   "please-enter-something": "請輸入{something}",
   "preview": "預覽",
