--- a/locales/en.json
+++ b/locales/en.json
@@ -15,6 +15,7 @@
   "login": "login",
   "login-failed": "login failed",
   "logout": "logout",
+  "nuxt-template": "nuxt template",
   "password": "password",
   "please-enter-something": "please enter {something}",
   "preview": "preview",
