--- a/locales/en.json
+++ b/locales/en.json
@@ -18,7 +18,9 @@
   "nuxt-template": "nuxt template",
   "password": "password",
   "please-enter-something": "please enter {something}",
+  "please-enter-valid-email": "please enter a valid email",
   "preview": "preview",
+  "something-not-match-target": "{something} does not match {target}",
   "switch-to-left": "switch to left",
   "switch-to-right": "switch to right",
   "username": "username"
