feat: add "no-data" translation to English and Traditional Chinese locales

--- a/locales/en.json
+++ b/locales/en.json
@@ -15,6 +15,7 @@
   "login": "login",
   "login-failed": "login failed",
   "logout": "logout",
+  "no-data": "no data",
   "nuxt-template": "nuxt template",
   "password": "password",
   "please-enter-something": "please enter {something}",
