feat: add phone number validation rules and utility functions for mobile and phone numbers

--- a/locales/en.json
+++ b/locales/en.json
@@ -21,6 +21,9 @@
   "please-enter-integer": "please enter an integer",
   "please-enter-something": "please enter {something}",
   "please-enter-valid-email": "please enter a valid email",
+  "please-enter-valid-mobile": "please enter a valid mobile",
+  "please-enter-valid-phone": "please enter a valid phone",
+  "please-enter-valid-something": "please enter a valid {something}",
   "preview": "preview",
   "something-not-match-target": "{something} does not match {target}",
   "switch-to-left": "switch to left",
