--- a/locales/zh-TW.json
+++ b/locales/zh-TW.json
@@ -21,6 +21,9 @@
   "please-enter-integer": "請輸入整數",
   "please-enter-something": "請輸入{something}",
   "please-enter-valid-email": "請輸入有效的電子信箱",
+  "please-enter-valid-mobile": "請輸入有效的手機",
+  "please-enter-valid-phone": "請輸入有效的電話",
+  "please-enter-valid-something": "請輸入有效的{something}",
   "preview": "預覽",
   "something-not-match-target": "{something}與{target}不相符",
   "switch-to-left": "切換到左邊",
